--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,9 +15,9 @@ spring:
       type: com.alibaba.druid.pool.DruidDataSource
     record:
       driver-class-name: com.mysql.jdbc.Driver
-      username: sunyuchao
-      password: SYCmysql123!
-      url: jdbc:mysql://sunyuchao.mysql.polardb.rds.aliyuncs.com:3306/sunyc?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      username: root
+      password: root
+      url: jdbc:mysql://localhost:3306/syc_user?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
       type: com.alibaba.druid.pool.DruidDataSource
 
 server:
