--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,20 +4,20 @@ spring:
     primary:
       driverClassName: com.mysql.jdbc.Driver
       username: root
-      password: root
-      url: jdbc:mysql://localhost:3306/syc_trans?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      password: SYCmysql123!
+      url: jdbc:mysql://cdb-b1ppo2ee.bj.tencentcdb.com:10133/syc_trans?useUnicode=true&characterEncoding=utf8
       type: com.alibaba.druid.pool.DruidDataSource
     user:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
-      password: root
-      url: jdbc:mysql://localhost:3306/syc_user?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      password: SYCmysql123!
+      url: jdbc:mysql://cdb-b1ppo2ee.bj.tencentcdb.com:10133/syc_user?useUnicode=true&characterEncoding=utf8
       type: com.alibaba.druid.pool.DruidDataSource
     record:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
-      password: root
-      url: jdbc:mysql://localhost:3306/syc_user?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      password: SYCmysql123!
+      url: jdbc:mysql://cdb-b1ppo2ee.bj.tencentcdb.com:10133/syc_record?useUnicode=true&characterEncoding=utf8
       type: com.alibaba.druid.pool.DruidDataSource
 
 server:
