--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.sunyc</groupId>
-    <artifactId>local-test</artifactId>
+    <artifactId>multi-data-source</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>local-test</name>
+    <name>multi-data-source</name>
     <description>孙玉朝的本地测试项目</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <docker.image.prefix>multi-data-source</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -102,6 +103,7 @@
     </dependencies>
 
     <build>
+        <finalName>multi-data-source</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -116,6 +118,28 @@
                     <forkMode>never</forkMode>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.11</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <imageTags>
+                        <imageTag>${project.version}</imageTag>
+                        <imageTag>latest</imageTag>
+                    </imageTags>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
